--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
   <title>React App</title>
 </head>
 
-<body className="w-screen h-screen bg-abbey" style="height:100%; background-color: rgba(70, 74, 77, 1); ">
+<!-- <body className="w-screen h-screen bg-abbey" style="height:100%; background-color: rgba(70, 74, 77, 1); "> -->
+
+<body class="w-screen h-screen bg-abbey">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
