--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Soncraftbot</title>
 </head>
 
 <!-- <body className="w-screen h-screen bg-abbey" style="height:100%; background-color: rgba(70, 74, 77, 1); "> -->
